# ctrl-utils

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Pipfile  README.md  annotated.html  api_documentation.html  argparse_8h_source.html  atomic_8h_source.html  atomic__queue_8h_source.html  chrono_8h_source.html  classctrl__utils_1_1_args-members.html  classctrl__utils_1_1_args.html  classctrl__utils_1_1_atomic-members.html  classctrl__utils_1_1_atomic.html  classctrl__utils_1_1_atomic_buffer-members.html  classctrl__utils_1_1_atomic_buffer.html  classctrl__utils_1_1_atomic_queue-members.html  classctrl__utils_1_1_atomic_queue.html  classctrl__utils_1_1_redis_client-members.html  classctrl__utils_1_1_redis_client.html  classctrl__utils_1_1_thread_pool-members.html  classctrl__utils_1_1_thread_pool.html  classctrl__utils_1_1_timer-members.html  classctrl__utils_1_1_timer.html  classctrl__utils_1_1_tree-members.html  classctrl__utils_1_1_tree.html  classctrl__utils_1_1_tree_1_1_chain_view-members.html  classctrl__utils_1_1_tree_1_1_chain_view.html  classctrl__utils_1_1_tree_1_1_chain_view_3_01_const_01_4-members.html  classctrl__utils_1_1_tree_1_1_chain_view_3_01_const_01_4.html  classctrl__utils_1_1_tree_1_1_child_view-members.html  classctrl__utils_1_1_tree_1_1_child_view.html  classctrl__utils_1_1_tree_1_1_descendant_view-members.html  classctrl__utils_1_1_tree_1_1_descendant_view.html  classctrl__utils_1_1_tree_1_1_iterator-members.html  (+73 more)
.github/workflows/: builds.yaml  docs.yaml  release.yaml  tests.yaml
_sources/python/: ctrlutils.RedisClient.rst.txt  ctrlutils.Timer.rst.txt  ctrlutils.decode_matlab.rst.txt  ctrlutils.eigen.Affine3d.rst.txt  ctrlutils.eigen.AngleAxisd.rst.txt  ctrlutils.eigen.Isometry3d.rst.txt  ctrlutils.eigen.LdltMatrixXd.rst.txt  ctrlutils.eigen.Projective3d.rst.txt  ctrlutils.eigen.Quaterniond.rst.txt  ctrlutils.eigen.Translation3d.rst.txt  ctrlutils.eigen.rst.txt  ctrlutils.far_quaternion.rst.txt  ctrlutils.lookat_error.rst.txt  ctrlutils.near_quaternion.rst.txt  ctrlutils.orientation_error.rst.txt  ctrlutils.ostream_redirect.rst.txt  ctrlutils.pd_control.rst.txt  ctrlutils.pseudo_inverse.rst.txt  ctrlutils.rst.txt
cmake/: Eigen3-CMakeLists.txt.in  FindEigen3.cmake.in  FindOpenCV.cmake.in  Findcpp_redis.cmake.in  Findnlohmann_json.cmake.in  Findpybind11.cmake.in  Findyaml-cpp.cmake.in  OpenCV-CMakeLists.txt.in  cpp_redis-CMakeLists.txt.in  ctrl-utilsConfig.cmake.in  ctrl_utilsConfig.cmake.in  ctrl_utils_add_subdirectory.cmake  include_package.cmake  nlohmann_json-CMakeLists.txt.in  pybind11-CMakeLists.txt.in  utils.cmake  yaml-cpp-CMakeLists.txt.in
cpp/: annotated.html  argparse_8h_source.html  atomic_8h_source.html  atomic__queue_8h_source.html  chrono_8h_source.html  classctrl__utils_1_1Args-members.html  classctrl__utils_1_1Args.html  classctrl__utils_1_1Atomic-members.html  classctrl__utils_1_1Atomic.html  classctrl__utils_1_1AtomicBuffer-members.html  classctrl__utils_1_1AtomicBuffer.html  classctrl__utils_1_1AtomicQueue-members.html  classctrl__utils_1_1AtomicQueue.html  classctrl__utils_1_1RedisClient-members.html  classctrl__utils_1_1RedisClient.html  classctrl__utils_1_1ThreadPool-members.html  classctrl__utils_1_1ThreadPool.html  classctrl__utils_1_1Timer-members.html  classctrl__utils_1_1Timer.html  classctrl__utils_1_1Tree-members.html  classctrl__utils_1_1Tree.html  classctrl__utils_1_1Tree_1_1ChainView-members.html  classctrl__utils_1_1Tree_1_1ChainView.html  classctrl__utils_1_1Tree_1_1ChainView_3_01Const_01_4-members.html  classctrl__utils_1_1Tree_1_1ChainView_3_01Const_01_4.html  classctrl__utils_1_1Tree_1_1ChildView-members.html  classctrl__utils_1_1Tree_1_1ChildView.html  classctrl__utils_1_1Tree_1_1DescendantView-members.html  classctrl__utils_1_1Tree_1_1DescendantView.html  classctrl__utils_1_1Tree_1_1Iterator-members.html  classctrl__utils_1_1Tree_1_1Iterator.html  classctrl__utils_1_1Tree_1_1RootView-members.html  classctrl__utils_1_1Tree_1_1RootView.html  classes.html  classstd_1_1bad__optional__access-members.html  classstd_1_1bad__optional__access.html  classstd_1_1binary__semaphore-members.html  classstd_1_1binary__semaphore.html  classstd_1_1counting__semaphore-members.html  classstd_1_1counting__semaphore.html  (+60 more)
cpp/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  (+23 more)
ctrlutils/: __init__.py  numpy.py  redis.py
doc/: Doxyfile  travis.sh
docs/: CMakeLists.txt  Doxyfile  api_documentation.rst  conf.py  getting_started.rst  index.rst
python/: CMakeLists.txt  __init__.py  ctrl_utils.cc  ctrlutils.RedisClient.html  ctrlutils.Timer.html  ctrlutils.decode_matlab.html  ctrlutils.eigen.Affine3d.html  ctrlutils.eigen.AngleAxisd.html  ctrlutils.eigen.Isometry3d.html  ctrlutils.eigen.LdltMatrixXd.html  ctrlutils.eigen.Projective3d.html  ctrlutils.eigen.Quaterniond.html  ctrlutils.eigen.Translation3d.html  ctrlutils.eigen.html  ctrlutils.far_quaternion.html  ctrlutils.html  ctrlutils.lookat_error.html  ctrlutils.near_quaternion.html  ctrlutils.orientation_error.html  ctrlutils.ostream_redirect.html  ctrlutils.pd_control.html  ctrlutils.pseudo_inverse.html
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  (+55 more)
src/: CMakeLists.txt
src/python/: CMakeLists.txt  ctrl_utils.cc  eigen.cc
(+27 files in other folders)
